--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "@types/webpack": "3.0.9",
     "autoprefixer": "^6.5.3",
     "codelyzer": "~3.0.1",
     "css-loader": "^0.28.1",
